[package]
name = "dada2fil"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
hifitime = "3.9.0"
lending-iterator = "0.1.7"
psrdada = { git = "https://github.com/kiranshila/psrdada-rs", branch = "v0_2" }
sigproc_filterbank = "0.3"
